@@ -403,6 +403,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 14515) HTML nesting cleanup on edit form
 * (bug 14647) Removed unused 'townBox' CSS classes
 * (bug 14687) OutputPage::addStyle() now adds type="text/css" like it should.
+* OpenSearch cleanup; Firefox now sends you to the search page for empty
+  searches instead of the domain root (which may not even be a wiki).
+
 
 === API changes in 1.13 ===
 
